Changelog
=========

9.9.dev0 - (unreleased)
-----------------------

9.8 - (2015-11-16)
------------------
* Feature: Improved chart chooser for inline embed to show only googlecharts:
  exhibits are currently not supported for embedding
  [chiridra refs #30417]
* Feature: relate to object if resolveuid is used in data provenance
  [lucas refs #30065]

9.7 - (2015-07-28)
------------------
* Bug Fix: unload video over HTTPS
  [lucas refs #26201]

9.6 - (2015-07-06)
------------------
* Bug Fix: tutorials use now youtube api v.3
  [lucas refs #26201]

9.5 - (2015-05-15)
------------------
* Change: Mark data provenance fields as required
  [szabozo0 refs #25341]

9.4 - (2015-05-05)
------------------
* Change: Made all data provenance fields required: title, link, owner
  [szabozo0 refs #24412]

9.3 - (2015-04-02)
------------------
* Change: Made data provenance required for published
  [szabozo0 refs #24412]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.daviz
* Feature: Added IDavizLayer browser layer
  [olimpiurob refs #24121]
* Change: Made "MultiDataProvenanceSchemaExtender" browser layer aware
  [olimpiurob refs #24121]

9.2 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install 
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

9.1 - (2014-11-20)
------------------
* Feature: formated_provenance now contain the acronym information extracted
  from the title of the data source if found within parenthesis
  [ichim-david refs #21467]

9.0 - (2014-10-01)
------------------
* Feature: removed "Caching" action. We are now using the more complex "Cache"
  action registered by eea.cache
  [ghicaale refs #21143]
* Feature: added upgrade step to remove absolete "Caching" action
  [ghicaale refs #21143]

8.9 - (2014-08-29)
------------------